[gd_scene load_steps=3 format=3 uid="uid://c1k3qhh5wfyyb"]

[ext_resource type="Script" path="res://scripts/image_gallery.gd" id="1_gallery"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button"]
bg_color = Color(0.3, 0.3, 0.5, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="ImageGallery" type="CanvasLayer"]
script = ExtResource("1_gallery")

[node name="Container" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="Container"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.1, 1)

[node name="Title" type="Label" parent="Container"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 20.0
offset_bottom = 60.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "HAI SA INVATAM"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Container"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 80.0
offset_right = -40.0
offset_bottom = -120.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="Container/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ImageDisplay" type="TextureRect" parent="Container/ScrollContainer/CenterContainer"]
custom_minimum_size = Vector2(800, 450)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="ButtonPanel" type="Panel" parent="Container"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -100.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_button")

[node name="HBoxContainer" type="HBoxContainer" parent="Container/ButtonPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="PrevButton" type="Button" parent="Container/ButtonPanel/HBoxContainer"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "‚óÑ Anterior"

[node name="PageLabel" type="Label" parent="Container/ButtonPanel/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "1 / 4"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NextButton" type="Button" parent="Container/ButtonPanel/HBoxContainer"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "UrmƒÉtor ‚ñ∫"

[node name="Spacer" type="Control" parent="Container/ButtonPanel/HBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="ZoomInButton" type="Button" parent="Container/ButtonPanel/HBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "üîç +"

[node name="ZoomOutButton" type="Button" parent="Container/ButtonPanel/HBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "üîç -"

[node name="Spacer2" type="Control" parent="Container/ButtonPanel/HBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="ExitButton" type="Button" parent="Container/ButtonPanel/HBoxContainer"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Ie»ôire"

[connection signal="pressed" from="Container/ButtonPanel/HBoxContainer/PrevButton" to="." method="_on_prev_button_pressed"]
[connection signal="pressed" from="Container/ButtonPanel/HBoxContainer/NextButton" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="Container/ButtonPanel/HBoxContainer/ZoomInButton" to="." method="_on_zoom_in_button_pressed"]
[connection signal="pressed" from="Container/ButtonPanel/HBoxContainer/ZoomOutButton" to="." method="_on_zoom_out_button_pressed"]
[connection signal="pressed" from="Container/ButtonPanel/HBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
